--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -8,3 +8,14 @@ a {
   padding: 20px;
   color: white;
 }
+
+@media (min-width: 600px) and (max-width: 1024px) {
+  .navbar {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .navbar {
+    width: 100%;
+  }
+}
