--- a/src/assets/css/galeria.css
+++ b/src/assets/css/galeria.css
@@ -1,24 +1,21 @@
+/* component galeria */
 .galeria {
   display: grid;
   gap: 10px;
   width: 100%;
   margin: 5rem;
-  position: relative;
-  
+  position: relative;  
 }
-
 .grid-columns-5 {
   grid-template-columns: repeat(4, 1fr);
   width: 80%;
   gap: 4% 2%;
   margin: 0 auto 0 auto;
 }
-
 #contenedor_galeria {
   padding-top: 2rem;
   margin-bottom: 3rem;
 }
-
 .foto {
   cursor: pointer;
   display: flex;
@@ -33,13 +30,12 @@
   text-shadow: 0px 0px 15px black; 
   border-radius: 20px;  
 }
-
-.galeria img:hover {
-  border-radius: 8px;
-  box-shadow: 0px 0px 10px 1px #43a047;
+.galeria .foto img:hover {
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px 1px #43a047;
 }
-
 .galeria .foto svg {
+  cursor: pointer;
   align-self: flex-end;
   border: 2px solid transparent;
   border-radius: 25px;
@@ -47,22 +43,23 @@
   margin-right: 1rem;
   position: absolute;
 }
-
-
+.galeria .foto svg:hover {
+  align-self: flex-end;
+  animation: latido 0.7s infinite;
+}
 .descripcion {
   display: block;
   width: 14rem;
   position: absolute;
   padding-left: 1em;
-  padding-top: 8em;
-
+  margin-top: 9.2em;
 }
-
 
 .galeria .p-3 {
   padding-top: 30px;
 }
 
+/* view favorito */
 .grid-columns-4 {
   grid-template-columns: repeat(4, 1fr);
   width: 80%;
@@ -70,7 +67,15 @@
   margin: 0 auto 0 auto;
 }
 
+.grid-columns-4 img:hover {
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 1px gray;
+  filter: sepia();  
+}
 
+
+/* renderización */
 @media (min-width: 600px) and (max-width: 1024px) {
   .grid-columns-5 {
     grid-template-columns: repeat(2, 1fr);
@@ -82,21 +87,14 @@
     width: 80%;
   }
   .galeria .foto svg {
-    align-self: flex-end;
-    border: 2px solid transparent;
-    border-radius: 25px;
-    margin-top: 0.6rem;
     margin-right: 0;
     margin-left: 3rem;
-    position: absolute;
   }
   .grid-columns-4 {
     grid-template-columns: repeat(2, 1fr);
-    width: 80%;
-    gap: 4% 2%;
-    margin: 0 auto 0 auto;
   }
 }
+
 @media (max-width: 600px) {
   .grid-columns-5 {
     grid-template-columns: repeat(1, 1fr);
@@ -104,20 +102,9 @@
     width: 50%;
     text-align: center;
   }
-  .galeria .foto svg {
-    align-self: flex-end;
-    border: 2px solid transparent;
-    border-radius: 25px;
-    margin-top: 0.6rem;
-    margin-right: 1rem;
-    position: absolute;
-  }
+
   .grid-columns-4 {
     grid-template-columns: repeat(1, 1fr);
     width: 50%;
-    gap: 4% 2%;
-    margin: 0 auto 0 auto;
-
   }
-
 }
