--- a/src/assets/css/galeria.css
+++ b/src/assets/css/galeria.css
@@ -32,7 +32,7 @@
 }
 .galeria .foto img:hover {
   border-radius: 10px;
-  box-shadow: 0px 0px 15px 1px #43a047;
+  box-shadow: 0px 0px 25px 1px #43a047;
 }
 .galeria .foto svg {
   cursor: pointer;
@@ -71,7 +71,7 @@
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0px 0px 20px 1px gray;
-  filter: sepia();  
+  filter:grayscale();  
 }
 
 
